--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Website Tutorial</title>
+	<title>daydreaminm</title>
 	<link rel="stylesheet" type="text/css" href="completedstyle.css"/>
 </head>
 
 <body>
 	<div id="page-wrapper">
 		<div id="name">
-			<h1>This is a header</h1>
-			<p>this is a paragraph</p>
+			<h1>my dad and i </h1>
+			<p> my best friend and i</p>
 		</div>
 
 		<div id="blue">
-			<img src="SummerDrink.jpg"/>
-			<h1>this is another header</h1>
+			<img src="IMG_1521.jpg"/>
+			<h1>hey welcome to daydreaminm</h1>
 			<p>this is another paragraph</p>
 		</div>
 
 
 		<div id="doubleyellow">
-			<img class="double" src="Pancakes.jpg" />
+			<img class="double" src="IMG_1035.jpg" />
 			<img class="double" src="Breakfast.jpg" />
       <h1 class="brown">this is another header</h1>
 		</div>
