--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 <body>
 	<div id="page-wrapper">
 		<div id="name">
-			<h1>my dad and i </h1>
-			<p> my best friend and i</p>
+			<h1>welcome to daydreaminm  </h1>
+			<p>on daydreaminm I'm to blog about my life and how high school can be tough... i bet everyone can relate but anyway hope you enjoy my website thanks for visting</p>
 		</div>
 
 		<div id="blue">
-			<img src="IMG_1521.jpg"/>
-			<h1>hey welcome to daydreaminm</h1>
-			<p>this is another paragraph</p>
+			<img src="IMG_1094.JPG"/>
+			<h1> this is a picture of me and my dad</h1>
+			<p> we took this picture on thanksgiving and i don't look half bad lol...but yea it was a fun day.</p>
 		</div>
 
 
 		<div id="doubleyellow">
-			<img class="double" src="IMG_1035.jpg" />
-			<img class="double" src="Breakfast.jpg" />
+			<img class="double" src="IMG_1035.JPG" />
+			<img class="double" src="IMG_1379.JPG" />
       <h1 class="brown">this is another header</h1>
 		</div>
 
