--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@
 		<div id="doubleyellow">
 			<img class="double" src="IMG_1035.JPG" />
 			<img class="double" src="IMG_1379.JPG" />
-      <h1 class="brown">this is another header</h1>
+      <h1 class="brown">me and my family </h1>
 		</div>
 
 
 		<div id="green">
-			<img src="Bread.jpg" />
-      <h1 class="brown">more headers</h1>
-			<p>more paragraphs</p>
+			<img src="IMG_1521.JPG" />
+      <h1 class="brown">i think this one of the best pictures i took so far with my braces</h1>
+			<p>before i got my braces i was really insecure about my teeth</p>
 		</div>
 
 		<div id="yellow">
-			<img src="Pasta.jpg" />
-			<h1 class="brown">header</h1>
-			<p>paragraph</p>
+			<img src="980x.jpg" />
+			<h1 class="brown"> the butterfly moment</h1>
+			<p> i like to think we are all butterflies waiting to hatch to our full potential
+			we grow lock in our cocoons waiting for the moment to fly and see what our purpose is 
+			never knowing where it might lead us we just know that it needs us to live out our destiny because we 
+			were chosen to fulfill our dreams....</p>
 		</div>
 
 
