--- a/index.html
+++ b/index.html
@@ -33,20 +33,19 @@
 		</div>
 
 		<div id="yellow">
-			<img src="980x.jpg" />
+			<img src="butterflies_1200px.jpg" />
 			<h1 class="brown"> the butterfly moment</h1>
 			<p> i like to think we are all butterflies waiting to hatch to our full potential
-			we grow lock in our cocoons waiting for the moment to fly and see what our purpose is 
-			never knowing where it might lead us we just know that it needs us to live out our destiny because we 
-			were chosen to fulfill our dreams....</p>
+			we grow lock in our cocoons waiting for the moment to fly and see what our purpose is never knowing where it might lead us we just know that it needs us to live out our destiny because we were chosen to fulfill our dreams....</p>
+		
 		</div>
 
 
 
 		<div id="white">
-			<img class="triple" src="Coffee.jpg" />
-			<img class="triple" src="Hot.jpg" />
-			<img class="triple" src="Coffee2.jpg" />
+			<img class="triple" src=".jpg" />
+			<img class="triple" src=".jpg" />
+			<img class="triple" src=".jpg" />
 			<h1 class="brown">Header!!!!</h1>
 			<p>paragraph!!!!</p>
 		</div>
